syntax = "proto3";
import "google/protobuf/empty.proto";

option go_package = "./proto";


message RestaurantType {
  int32 id = 1;
  string name = 2;
}

message GetRestaurantTypeResponse {
  repeated RestaurantType restaurantTypes = 1;
}

message Empty {}

service RestaurantTypeService {
  rpc GetRestaurantTypes (google.protobuf.Empty) returns (GetRestaurantTypeResponse) {}
}